Get Ready Notmal Db

--- a/AirplaneTicketService/appsettings.json
+++ b/AirplaneTicketService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "TicketsDb" : "Server=(localdb)\\mssqllocaldb;Database=PlaneTickets;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
